--- a/cookietest.html
+++ b/cookietest.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-<script>
-function setCookie(cname,cvalue,exdays) {
-  const d = new Date();
-  d.setTime(d.getTime() + (exdays*24*60*60*1000));
-  let expires = "expires=" + d.toUTCString();
-  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cookie Test</title>
+    <h2>Cookie Test</h2>
+  </head>
+  <body>
+    <p id="demo"></p>
+    <section>
+    </section>
+  </body>
+  <script>
+    let playMoves=18;
+    setCookie("topScore",playMoves,300);
 
-function getCookie(cname) {
-  let name = cname + "=";
-  let decodedCookie = decodeURIComponent(document.cookie);
-  let ca = decodedCookie.split(';');
-  for(let i = 0; i < ca.length; i++) {
-    let c = ca[i];
-    while (c.charAt(0) == ' ') {
-      c = c.substring(1);
+    function setCookie(cname,cvalue,exdays) {
+      const d = new Date();
+      d.setTime(d.getTime() + (exdays*24*60*60*1000));
+      let expires = "expires=" + d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
     }
-    if (c.indexOf(name) == 0) {
-      return c.substring(name.length, c.length);
+    console.log(document.cookie);
+
+    function getCookie(cname) {
+      const decode = decodeURIComponent(document.cookie);
+      console.log(decode);
+      const array1 = decode.split(";");
+      console.log(array1);
+      if (array1.length>0) {
+        const array2 = array1[0].split("=");
+        const cvalue = array2[1];
+        return cvalue;
+      } else{
+        return "";
+      }
     }
-  }
-  return "";
-}
 
-function checkCookie() {
-  let user = getCookie("username");
-  if (user != "") {
-    alert("Welcome again " + user);
-  } else {
-     user = prompt("Please enter your name:","");
-     if (user != "" && user != null) {
-       setCookie("username", user, 30);
-     }
-  }
-  console.log(user);
-  console.log(getCookie("username"));
-}
-</script>
-</head>
+    console.log(getCookie("topScore"));
 
-<body onload="checkCookie()"></body>
-
+  </script>
 </html>
